(lang dune 3.4)

(name register_machine_sim)

(generate_opam_files true)

(package
 (name register_machine_sim)
 (synopsis "Register machine simpulator")
 (description "Register machine simpulator")
 (depends ocaml dune)
 )

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
